# internal/model/request_log_model.go
@@ -25,3 +25,24 @@ type ReqRecordAPIHit struct {
 type ResRecordAPIHit struct {
 	OK bool `json:"ok"`
 }
+
+type ReqGetTop3ClientRequestCount24Hour struct {
+}
+
+type ResGetTop3ClientRequestCount24Hour struct {
+	NameCountList NameCountList `json:"name_count_list"`
+}
+
+type NameCount struct {
+	Name  string `json:"name"`
+	Count int    `json:"count"`
+}
+
+type NameCountList []NameCount
+
+type APIKeyCount struct {
+	APIKey string
+	Count  int
+}
+
+type APIKeyCountList []APIKeyCount
