# internal/usecase/requestlog/request_log_usecase_mw_logger.go
@@ -43,3 +43,15 @@ func (r *RequestLogUsecaseMwLogger) BatchConsumeClientRequestLogEvent(ctx contex
 
 	return err
 }
+
+func (r *RequestLogUsecaseMwLogger) GetTop3ClientRequestCount24Hour(ctx context.Context, req *model.ReqGetTop3ClientRequestCount24Hour) (*model.ResGetTop3ClientRequestCount24Hour, error) {
+	res, err := r.Next.GetTop3ClientRequestCount24Hour(ctx, req)
+
+	fields := logrus.Fields{
+		"req": req,
+		"res": res,
+	}
+	x.LogMw(ctx, fields, err, layer.Usecase)
+
+	return res, err
+}
